//
//  Ефиы.swift
//  Matule
//
//  Created by Михайлов Евгений on 19.02.2025.
//  Вкладки

import Foundation


enum Tabs {
    case home, favorites, notifications, profile
}
