...
                Button {
                    model.loginUser()
                } label: {
                    Text("Войти")
                    
                }
                .accessibilityIdentifier("btn")
                .buttonStyle(MainButtonStyle(background: .accent, foreground: .block))
                Spacer()
                HStack {
                    Text("Вы впервые?")
                        .customFont(fontSize: 16, weight: .regular, foreground: .hint)
                    NavigationLink(destination: SignUp().navigationBarBackButtonHidden()) {
...
